--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -205,6 +205,11 @@
     width: 80vh;
   }
 }
+@media only screen and (max-device-width: 640px) and (max-device-height: 370px) {
+  .navbar {
+    width: 111%;
+  }
+}
 
 /*
 
